Update CSS - Fix accessibility lighthouse   -- Add hidden and invisible to not active slides

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -108,6 +108,9 @@ input {
 .slick-list {
   @apply pb-8 !important;
 }
+.slick-slide:not(.slick-active) {
+  @apply hidden invisible;
+} 
 
 /* Loading */
 .lds-ripple {
